--- a/sandbox/mxp.greenpeace.es.conf
+++ b/sandbox/mxp.greenpeace.es.conf
@@ -25,11 +25,11 @@ server {
     }
 
     location / {
-        proxy_set_header Host api.mixpanel.com;
+        proxy_set_header Host api-eu.mixpanel.com;
         proxy_set_header X-Real-IP $http_x_forwarded_for;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $server_name;
-        proxy_pass https://api.mixpanel.com/;
+        proxy_pass https://api-eu.mixpanel.com;
     }
 
     listen [::]:443 ssl; # managed by Certbot
